# nea-project

./: README.md
game/: CMakeLists.txt
game/assets/levels/: level1.txt  level2.txt  level3.txt
game/inc/: collision.h  game.h  level.h  player.h  tether.h
game/levels/: level_2.txt
game/src/: collision.c  conf.py  enemies.py  game.c  level.c  main.c  main.py  player.c  player.py  tether.c  world.py
src/: main.py
